Validasyon ve dosya ekleme işlemleri bulunmaktadır.
