# src/index.ts
@@ -5,8 +5,8 @@ import user from "./routes/user";
 import auth from "./routes/auth";
 import swaggerDocs from "./utils/swagger";
 import cors from "cors";
-import cookieParser from 'cookie-parser'
-import { verifyToken } from "./middleware/auth";
+import cookieParser from "cookie-parser";
+import { authMiddleware } from "./middleware/auth";
 
 db.initialize()
   .then(() => console.log("Veri tabanı başlatıldı!"))
@@ -20,10 +20,11 @@ const port = process.env.PORT || 3000;
 app.use(cors());
 app.use(express.json());
 app.use(cookieParser());
+// app.use(fileUpload({ safeFileNames: true, preserveExtension: true }));
 app.use(express.static("public"));
 
 app.use("/", auth);
-app.use("/users", verifyToken, user);
+app.use("/users", authMiddleware, user);
 swaggerDocs(app, +port);
 app.use((req, res) => {
   res.status(404).send("Sayfa bulunamadı.");
